--- a/provisioning/roles/ensure_apache_container_is_deployed/tasks/main.yml
+++ b/provisioning/roles/ensure_apache_container_is_deployed/tasks/main.yml
@@ -9,11 +9,11 @@
 - name: http folder
   become: yes
   file:
-    path: /opt/apache_container./public-html/
+    path: /opt/apache_container/public-html/
     state: directory
 
 - name: index html
-  template: src=index.html.j2 dest=/opt/apache_container./public-html/index.html    
+  template: src=index.html.j2 dest=/opt/apache_container/public-html/index.html    
 
 - name: Dockerfile
   template: src=Dockerfile.j2 dest=/opt/apache_container/Dockerfile
